Apply fix for issue: CSRF Protection Missing in Express Server

--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "falcor-json-graph": "^1.1.7",
     "falcor-path-syntax": "^0.2.4",
     "falcor-path-utils": "^0.7.5",
